@@ -1,5 +1,5 @@
 /* xml.h -- xml output declarations.
-   $Id: xml.h,v 1.10 2003-11-08 01:00:43 dirt Exp $
+   $Id: xml.h,v 1.11 2003-11-08 04:01:51 dirt Exp $
 
    Copyright (C) 2001, 2002, 2003 Free Software Foundation, Inc.
 
@@ -65,7 +65,7 @@ enum xml_element
   DIRCATEGORY,
   QUOTATION, EXAMPLE, SMALLEXAMPLE, LISP, SMALLLISP, CARTOUCHE,
     COPYING, FORMAT, SMALLFORMAT, DISPLAY, SMALLDISPLAY, VERBATIM,
-  FOOTNOTE, 
+  FOOTNOTE, LINEANNOTATION,
   ITEMIZE, ITEMFUNCTION, ITEM, ENUMERATE, TABLE, TABLEITEM, TABLETERM,
   INDEXTERM, 
   XREF, XREFNODENAME, XREFINFONAME, XREFPRINTEDDESC, XREFINFOFILE,
